# docs/swagger.json
@@ -418,11 +418,6 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
-                        "name": "keyword",
-                        "in": "query"
-                    },
-                    {
                         "minimum": 1,
                         "type": "integer",
                         "name": "page",
@@ -433,6 +428,11 @@
                         "minimum": 1,
                         "type": "integer",
                         "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "user_id",
                         "in": "query"
                     },
                     {
